# classy

./: .gitignore  Makefile  README.md  classy_gcp_memory_classification_plan.md  config.toml  gcp-deploy-plan.md  gmail-semantic-labeling-plan.md  mac_uv_launchd_service_plan.md  new-user-provisioning-plan.md  pyproject.toml  service-install-plan.md  stateless-bootstrap-plan.md  test_plan.md
docs/: gmail-setup.md
scripts/: build_embeddings.py  classify_and_label.py  dry_run.py  fetch_inbox.py  fetch_training_data.py  gcp-create.sh  gcp-deploy.sh  gcp-destroy.sh  gcp-slim.sh  service-install.sh  service-uninstall.sh  train_and_evaluate.py
src/gmail_classifier/: auth.py  classifier.py  config.py  cross_validation.py  embedding_cache.py  embeddings.py  evaluate.py  evaluation.py  fetcher.py  gmail_client.py  gmail_parser.py  history_processor.py  inbox_check.py  label_change_handler.py  label_registry.py  memory.py  models.py  preprocessing.py  pubsub.py  pubsub_loop.py  storage.py  training.py  training_index.py
tests/: test_auth.py  test_classifier.py  test_config.py  test_cross_validation.py  test_embedding_cache.py  test_embeddings.py  test_evaluate_script.py  test_evaluation.py  test_fetch.py  test_gmail_client.py  test_gmail_parser.py  test_history_processor.py  test_inbox_check.py  test_label_change_handler.py  test_label_registry.py  test_preprocessing.py  test_pubsub.py  test_pubsub_loop.py  test_sigterm.py  test_storage.py  test_text_representation.py  test_training.py  test_training_index.py
