[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-classifier"
version = "0.1.0"
description = "Gmail semantic auto-labeling using KNN on sentence embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "beautifulsoup4",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-cloud-pubsub",
    "fastembed",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests that load ML models (deselect with '-m \"not slow\"')"]

[tool.setuptools.packages.find]
where = ["src"]
